# urest

./: .gitignore  .readthedocs.yaml  Changelog.md  LICENCE  LICENCE.md  README.docx  README.html  README.md  README.tex  __init__.py  echo_test.py  mkdocs.yml  pyproject.toml  requirements.txt  tmp.py  tox.ini  venv_requirements.list
.github/: dependabot.yml
.github/workflows/: codeql.yml  ruff.yml
api/: __init__.py  base.py
doc/http/: client.html  cookiejar.html  cookies.html  index.html  server.html
doc/urest/: index.html
doc/urest/api/: base.html  index.html
doc/urest/http/: index.html  response.html  server.html
doc/urest/noun/: index.html
docs/: index.md
docs/background/: async.md
docs/css/: extra.css
docs/how_to/: api_server.md  pico_setup.md  run_tests.md
docs/media/: Rakefile  sd_api_get.atxt  sd_api_get.puml  sd_api_set.atxt  sd_api_set.puml  sd_async_set.atxt  sd_async_set.puml  sd_async_set_conflict.atxt  sd_async_set_conflict.puml  sd_http_get.atxt  sd_http_get.puml  sd_http_set.atxt  sd_http_set.puml  urest.atxt  urest.puml  urest_api.atxt  urest_api.puml  urest_examples.atxt  urest_examples.puml  urest_http.atxt  urest_http.puml
docs/ref/: api.md  exceptions.md  http.md  utils.md
docs/tutorials/: client_test.md  pico_server.md
docs/urest/: index.html
docs/urest/api/: base.html  index.html
docs/urest/example/: index.html  simpleled.html
docs/urest/examples/: echo.html  index.html  led_control.html  pwmled.html  simpleled.html
docs/urest/http/: index.html  response.html  server.html  urest.html
docs/urest/noun/: base.html
docs/urest/tests/: extra_pwm_get.html  index.html  simple_get.html  test_simple_delete.html  test_simple_get.html  test_simple_set.html  test_simple_update.html
example/: simpleled.py
examples/: __init__.py  echo.py  echo_server.py  led_control.py  pwmled.py  simpleled.py
http/: __init__.py  response.py  server.py
tests/: extra_pwm_get.py  test_simple_delete.py  test_simple_get.py  test_simple_set.py  test_simple_update.py
urest/: __init__.py  const.py  enum.py  typing.py
urest/api/: __init__.py  base.py
urest/examples/: .pwmled.py.swp  __init__.py  echo.py  echo_server.py  led_control.py  pwmled.py  simpleled.py
urest/http/: __init__.py  response.py  server.py  server.py.orig
urest/tests/: __init__.py  extra_pwm_get.py  test_simple_delete.py  test_simple_get.py  test_simple_set.py  test_simple_update.py
urest/utils/: __init__.py  network_connect.py
