[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "urest-mp"
version = "0.2.7"
authors = [
  { name="David Love", email="david.love@leedsbeckett.ac.uk" },
]
description = "An embedded HTTP server, focused on very small REST-style API's"
readme = "README.md"
requires-python = ">=3.4"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dlove24/urest"
"Documentation" = "https://dlove24.github.io/urest/urest/index.html"

[tool.setuptools]
packages = ["urest", "urest.api", "urest.examples", "urest.http"]
