[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "urest-mp"
version = "0.2.10"
authors = [
  { name="David Love", email="david.love@leedsbeckett.ac.uk" },
]
description = "An embedded HTTP server, focused on very small REST-style API's"
readme = "README.md"
requires-python = ">=3.4"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dlove24/urest"
"Documentation" = "https://dlove24.github.io/urest/urest/index.html"

[tool.setuptools]
packages = ["urest", "urest.api", "urest.examples", "urest.http", "urest.utils"]

[tool.ruff]
# Enable modules for static type and doc checking
select = ["A", "ANN0", "ANN2", "ARG", "B", "BLE", "C4", "COM", "D4", "DTZ", "E", "EM", "F", "FBT", "I", "ICN", "INP", "INT", "ISC", "N", "PIE", "PL", "PLC", "PLE", "PLR", "PLW", "PT", "PYI", "Q",  "RSE", "RUF", "S", "SIM", "SLF", "TID", "TCH", "TRY", "UP", "W"]

# Ignore
# * F401 - Handle redundant imports via the module.
# * F821 - ypes needed by the static type checker
# * D412,D416 - Document formatting handled by docformatter
# * N802 - Ignore special cases of mixedCase variables in the typing libraray
# * PIE790 - Ignore pass comments as these are required to stop black fighting docformatter
# * PLR0913 - We use optional arguments a lot, so ignore complaints about the number of arguments
# * PLR0912 - Ignore deep branches
ignore = ["D412", "D416", "F401", "F821", "N802", "PIE790", "PLR0912", "PLR0913"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".pytype",
    ".ruff_cache",
    ".tox",
    ".venv",
    "__pypackages__",
    "build",
    "dist",
]

# Ignore slightly long lines (often generated by docformatter or black)
line-length = 110

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Handle modules slightly differently
ignore-init-module-imports = true

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.per-file-ignores]
# Ignore 'typing' as far as possible
"lbutils/typing.py" = ["ANN", "ARG"]

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.mypy]
ignore_missing_imports = true