[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "urest-mp"
version = "0.2.10"
authors = [
  { name="David Love", email="david.love@leedsbeckett.ac.uk" },
]
description = "An embedded HTTP server, focused on very small REST-style API's"
readme = "README.md"
requires-python = ">=3.4"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dlove24/urest"
"Documentation" = "https://dlove24.github.io/urest/urest/index.html"

[tool.setuptools]
packages = ["urest", "urest.api", "urest.examples", "urest.http", "urest.utils"]

[tool.ruff]
# Enable modules for static type and doc checking
lint.select = ["A", "ANN0", "ANN2", "ARG", "B", "BLE", "C4", "COM", "D4", "DTZ", "E", "EM", "F", "FBT", "I", "ICN", "INP", "INT", "ISC", "N", "PIE", "PL", "PLC", "PLE", "PLR", "PLW", "PT", "PYI", "Q",  "RSE", "RUF", "S", "SIM", "SLF", "TID", "TCH", "TRY", "UP", "W"]

# Ignore
# * D412,D416 - Document formatting handled by docformatter
# * E501 - Line length is handled by 'black' and 'docformatter'
# * F401 - Handle redundant imports via the module
# * F821 - ypes needed by the static type checker
# * FBT0 - Ignore boolean function arguments for now
# * N802 - Ignore special cases of mixedCase variables in the typing libraray
# * PIE790 - Ignore pass comments as these are required to stop black fighting docformatter
# * PLR0913 - We use optional arguments a lot, so ignore complaints about the number of arguments
# * PLR0912 - Ignore deep branches
# * UP007 - Don't allow Python 3.10 syle type annotations (just yet)
lint.ignore = ["D412", "D416", "E501", "F401", "F821", "FBT0", "N802", "PIE790", "PLR0912", "PLR0913", "UP007"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
lint.unfixable = []

# Exclude directories which are non-code. All add 'tests' as this (deliberately)
# breaks some of the standard rules to ensure compliance.
exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".pytype",
    ".ruff_cache",
    ".tox",
    ".venv",
    "__pypackages__",
    "build",
    "dist",
    "tests",
]

# Ignore slightly long lines (often generated by docformatter or black)
line-length = 110

# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Handle modules slightly differently
lint.ignore-init-module-imports = true

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
# Ignore the unused argument for the echo server
"examples/echo.py" = ["ARG002"]
# Dummy passwords in use, and values from the network API
"examples/led_control.py" = ["FBT003", "PLR2004", "S105", "TRY301"]
# Dummy passwords in use, and values from the network API
"examples/pwmled.py" = ["ARG002", "FBT003", "PLR2004", "S105", "TRY301"]
# Ignore the unused argument for the simple servers
"urest/examples/echo.py" = ["ARG002"]
"urest/examples/pwmled.py" = ["ARG002"]
"urest/examples/simpleled.py" = ["ARG002"]
# Ignore default binding for the server class, and the long 'dispatch_noun',
# the nested '__debug__' flags, and the fake 'switch..case' statements
"urest/http/server.py" = ["BLE001", "PLR0915", "PLR5501", "S104", "SIM102", "SIM114"]
# Ignore the many returns of the network checks
"urest/utils/network_connect.py" = ["PLR0911"]
# Ignore 'typing' as far as possible
"urest/typing.py" = ["ANN", "ARG"]

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.mypy]
ignore_missing_imports = true
exclude = [
    "typing.py",
]
